--- a/environment.yml
+++ b/environment.yml
@@ -1,46 +1,62 @@
-name: venv_redes
+name: ./env
 channels:
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - bidict=0.23.1
+  - _openmp_mutex=5.1
+  - annotated-types=0.6.0
+  - anyio=4.7.0
+  - bidict=0.21.2
   - blinker=1.9.0
   - bzip2=1.0.8
-  - ca-certificates=2025.4.26
+  - ca-certificates=2025.2.25
+  - certifi=2025.4.26
   - click=8.1.8
+  - distro=1.9.0
+  - expat=2.7.1
   - flask=3.1.0
-  - flask-socketio=5.5.1
-  - h11=0.16.0
-  - importlib-metadata=8.6.1
+  - flask-socketio=5.3.1
+  - flask-sqlalchemy=3.1.1
+  - greenlet=3.1.1
+  - h11=0.14.0
+  - httpcore=1.0.2
+  - httpx=0.28.1
+  - idna=3.7
   - itsdangerous=2.2.0
   - jinja2=3.1.6
-  - ld_impl_linux-64=2.43
-  - libexpat=2.7.0
-  - libffi=3.4.6
-  - libgcc=15.1.0
-  - libgcc-ng=15.1.0
-  - libgomp=15.1.0
-  - liblzma=5.8.1
+  - jiter=0.6.1
+  - ld_impl_linux-64=2.40
+  - libffi=3.4.4
+  - libgcc-ng=11.2.0
+  - libgomp=11.2.0
   - libmpdec=4.0.0
-  - libsqlite=3.49.2
-  - libuuid=2.38.1
-  - libzlib=1.3.1
+  - libstdcxx-ng=11.2.0
+  - libuuid=1.41.5
   - markupsafe=3.0.2
-  - ncurses=6.5
-  - openssl=3.5.0
-  - pip=25.1.1
-  - python=3.13.3
+  - ncurses=6.4
+  - openai=1.78.1
+  - openssl=3.0.16
+  - pip=25.1
+  - pydantic=2.10.3
+  - pydantic-core=2.27.1
+  - python=3.13.2
   - python-dotenv=1.1.0
-  - python-engineio=4.12.0
-  - python-socketio=5.13.0
+  - python-engineio=4.1.0
+  - python-socketio=5.3.0
   - python_abi=3.13
   - readline=8.2
-  - simple-websocket=1.1.0
-  - tk=8.6.13
-  - typing_extensions=4.13.2
+  - setuptools=78.1.1
+  - sniffio=1.3.0
+  - sqlalchemy=2.0.39
+  - sqlite=3.45.3
+  - tk=8.6.14
+  - tqdm=4.67.1
+  - typing-extensions=4.12.2
+  - typing_extensions=4.12.2
   - tzdata=2025b
   - werkzeug=3.1.3
-  - wsproto=1.2.0
-  - zipp=3.21.0
+  - wheel=0.45.1
+  - xz=5.6.4
+  - zlib=1.2.13
+prefix: ./env
